# talos-ai-gateway

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  check_keys.py  docker-compose.multi-region.yml  docker-compose.phase11.yml  docker-compose.yml  e2e_results.txt  gateway_surface.json  mcp_config.json  ollama_debug_dispatch.py  ollama_seed.py  pyproject.toml  requirements.txt  run_verification.sh  setup_test_budget.py  test_protocol_handshake.py  validate_secrets_safety.py  verify_a2a_sdk.py  verify_admin_auth.py  verify_budgets.py  verify_concurrency.py  verify_glb.py  verify_integration.py  verify_mcp_imports.py  verify_multi_region.py  verify_phase11.py  verify_phase12_static.py  verify_phase13_static.py  verify_ratelimit.py  verify_rbac.py  verify_rotation.py  verify_sdk.ts  verify_secrets.py  verify_stats.py  verify_ws_session.py
.agent/: README.md  test_manifest.yml
alembic/: env.py
app/: cli.py  config_loader.py  dependencies.py  errors.py  logging_hardening.py  main.py  policy.py  settings.py
config/: agents.example.json  gateway.json  global-router.conf  mcp.json
docs/: ROTATION_RUNBOOK.md  agent_prompt.md
scripts/: benchmark_gateway.py  cleanup.sh  start.sh  test.sh  verify_app_import.py  verify_budget_ops.py
tests/: test_a2a_integration.py  test_a2a_logic.py  test_a2a_rpc_auth.py  test_attestation.py  test_audit_e2e.py  test_audit_hardening.py  test_crash_recovery.py  test_dependency_paths.py  test_idempotency_hardening.py  test_main_background_workers.py  test_middleware_integration.py  test_phase11.py  test_phase_11.py  (+13 more)
(+258 files in other folders)
